2010-06-03	Hans Rakers <hans at react.nl>

		* Fixed compilation against php-5.1. This closes ticket #426.

2010-02-25	Hans Rakers <hans at react.nl>

		* Fixed class static variable restore where parent was protected
		  static and child was public static. This would lead to error
		  'Access to undeclared static property' upon restore from cache
		* Added proper handling of class properties during storing in
		  cache. Public/private/protected is properly handled now. Somehow
		  this was a long overdue TODO spotted by running the testsuite.
		  This fixes ticket #408
		* Small fix that solves some issues with lambda (closure)
		  functions. This solves ticket #405

2010-02-24	Hans Rakers <hans at react.nl>

		* Fixed double free in eaccelerator_globals_dtor. This closes
		  ticket #404

2010-02-18	Hans Rakers <hans at react.nl>

		* Remove some leftover debug output that broke compilation with
		  php-5.2 and --with-eaccelerator-debug
		* php_check_open_basedir only needs to be called when restoring

2010-02-04	Hans Rakers <hans at react.nl>

		* Fixed linking of ZEND_DECLARE_INHERITED_CLASS_DELAYED across
		  bb's in the optimizer. This fixes bug #399

2010-02-04	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove some leftovers from the lock api
		* Now really add the sched_yield command and not only in commented
		out

2010-02-03	Bart Vanbrabant <bart at vanbrabant.eu>

		* Include the resolve path function from php so it is available for
		older PHP versions as well. Includes that start file:// work now.
		* Enable phar caching: Files in included from a phar file are cached
		now. The phar archive is used to excute the stat on.
		* Enable check_mtime usage again
		* Use snprintf the right way. See #290
		* Add a call to sched_yield after a failed spinlock to prevent
		deadlock conditions. This should fix #381 and is a real fix for #340.
		Instead of using a fake select as yield, a check is added to disable
		spinlocks on systems that do not have sched_yield.