@@ -1,3 +1,13 @@
+2010-07-11 Bart Vanbrabant <bart@vanbrabant.eu>
+
+    * Changed the way the cache directory is created:
+		- The forked process creates the cache dir and makes it world writable
+		- The first request creates a subdir with the userid of the process and
+		with permissions 700.
+
+	* Comment out an unused function to support compilin with -Werror
+	* Add sched.h include to fix a compiler warning
+
 2010-06-03	Hans Rakers <hans at react.nl>
 
 		* Fixed compilation against php-5.1. This closes ticket #426.
